First commit : merge from three original repos and coordinates change